turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:51: error: type mismatch;
 found   : (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int)))
 required: Array[Array[Array[Int]]]
  		rule=(((0,NOTURN,0),(1,NOTURN,1)),((1,NOTURN,0),(1,NOTURN,1)))
                     ^